# server

./: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  README.md  Server.cpp  Server.h  Service.h  main.cpp
Environment/: MIME.txt
Location/: Location.cpp  Location.h  LocationHandler.cpp  LocationHandler.h
MIME/: MIME_Detector.cpp  MIME_Detector.h
Message/: Message.cpp  Message.h
